--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "React frontend for MatchApp - A real-time location-based matching application",
   "private": true,
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.2",
+    "axios": "^1.5.0",
+    "framer-motion": "^12.23.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
-    "axios": "^1.5.0",
-    "socket.io-client": "^4.5.4",
-    "@googlemaps/js-api-loader": "^1.16.2",
-    "react-toastify": "^9.1.3",
-    "react-loading-spinner": "^1.0.12",
     "react-modal": "^3.16.1",
     "react-phone-input-2": "^2.15.1",
+    "react-router-dom": "^6.15.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.3",
+    "socket.io-client": "^4.5.4",
     "styled-components": "^6.0.7",
-    "framer-motion": "^10.16.4",
     "web-vitals": "^3.4.0",
     "workbox-webpack-plugin": "^7.0.0"
   },
@@ -51,13 +51,13 @@
     ]
   },
   "devDependencies": {
-    "react-scripts": "5.0.1",
     "@testing-library/jest-dom": "^6.1.4",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.5.1",
     "eslint": "^8.51.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "react-scripts": "^5.0.1",
     "serve": "^14.2.1"
   },
   "proxy": "http://localhost:5000",
@@ -88,5 +88,5 @@
   "bugs": {
     "url": "https://github.com/yourusername/matching-app/issues"
   },
-  "homepage": "https://github.com/yourusername/matching-app#readme"
+  "homepage": "/"
 }
