--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@googlemaps/js-api-loader": "^1.16.2",
     "axios": "^1.5.0",
-    "framer-motion": "^12.23.12",
+    "country-telephone-data": "^0.6.3",
+    "framer-motion": "^12.23.22",
+    "lucide-react": "^0.545.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
@@ -31,6 +33,7 @@
     "serve": "serve -s build -l 3000",
     "test:coverage": "react-scripts test --coverage --no-cache --watchAll=false",
     "preview": "npm run build && npm run serve"
+    
   },
   "eslintConfig": {
     "extends": [
